--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,9 @@ body.unknown { background-color: #444  }
 body{
     background-color: #121312;
 }
-
+*{
+    margin:0;
+}
 button{
     background-color:transparent;
     border: unset;
@@ -93,4 +95,66 @@ button:hover{
     width: 200px;
     height: 200px;
     object-fit: cover;
+}
+.c-informativa{
+    width: 100%;
+    height: 100vh;
+    padding: 20px;
+    margin: auto;
+    text-align: center;
+    color:white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: url(portal.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.c-informativa img{
+    width: 600px;
+    height: auto;
+    margin: 20px 0;
+}
+.c-informativa p{
+ background-color: rgb(36, 36, 82);
+ margin: 0 200px;
+color: white;
+border-radius: 12px;
+
+}
+.c-informativa a{
+    color:white;
+    text-decoration: none;
+}
+@media (max-width: 768px) {
+    .c-informativa {
+        padding: 15px;
+        background-position: center;
+    }
+
+    .c-informativa img {
+        max-width: 350px;
+    }
+
+    .c-informativa p {
+        font-size: 0.95rem;
+      
+    }
+}
+
+
+@media (max-width: 480px) {
+    .c-informativa {
+        padding: 10px;
+    
+    }
+
+    .c-informativa img {
+        max-width: 300px;
+    }
+
+    .c-informativa p {
+        font-size: 0.9rem;
+        padding: 8px;
+        margin:0 100px
+    }
+    
 }
