--- a/styles.css
+++ b/styles.css
@@ -97,16 +97,14 @@ button:hover{
     object-fit: cover;
 }
 .c-informativa{
-    width: 100%;
-    height: 100vh;
+   
     padding: 20px;
     margin: auto;
     text-align: center;
     color:white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-image: url(portal.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color:greenyellow
+  
 }
 .c-informativa img{
     width: 600px;
@@ -114,7 +112,7 @@ button:hover{
     margin: 20px 0;
 }
 .c-informativa p{
- background-color: rgb(36, 36, 82);
+ background-color: rgb(2, 90, 21);
  margin: 0 200px;
 color: white;
 border-radius: 12px;
@@ -148,7 +146,7 @@ border-radius: 12px;
     }
 
     .c-informativa img {
-        max-width: 300px;
+        max-width: 3dvh;
     }
 
     .c-informativa p {
