--- a/styles.css
+++ b/styles.css
@@ -103,17 +103,16 @@ button:hover{
     text-align: center;
     color:white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color:greenyellow
+    background-color:rgb(129, 194, 32)
   
 }
 .c-informativa img{
     width: 600px;
     height: auto;
-    margin: 20px 0;
+    
 }
 .c-informativa p{
  background-color: rgb(2, 90, 21);
- margin: 0 200px;
 color: white;
 border-radius: 12px;
 
@@ -122,37 +121,15 @@ border-radius: 12px;
     color:white;
     text-decoration: none;
 }
-@media (max-width: 768px) {
-    .c-informativa {
-        padding: 15px;
-        background-position: center;
+@media(max-width:480px) {
+    .c-informativa{
+        font-size: 5px;
     }
-
-    .c-informativa img {
-        max-width: 350px;
+    .c-informativa img{
+        width: 300px;
     }
-
-    .c-informativa p {
-        font-size: 0.95rem;
-      
+    .c-informativa p{
+        margin-left: 100px;
+        margin-right: 100px;
     }
-}
-
-
-@media (max-width: 480px) {
-    .c-informativa {
-        padding: 10px;
-    
-    }
-
-    .c-informativa img {
-        max-width: 3dvh;
-    }
-
-    .c-informativa p {
-        font-size: 0.9rem;
-        padding: 8px;
-        margin:0 100px
-    }
-    
 }
