--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,13 @@ button:hover{
   display:inline-block;
   margin-top:6px;
 }
+body.informativa {
+  background-image: url("portal.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+}
 
 
 @media (max-width: 400px){
